2011-06-15 Roman
- !!!!:DAQ, DAQ.DiamondBoards, DAQ.ModBus, DAQ.LogicLev:
    Parameter type changing support is added for disabled parameters of multitype DAQ modules.
    All multitype modules is adapted for that.
- SYS: Default locale for init-scripts is changed to en_US.UTF-8. Debian-package's postinst script is fixed.
- DAQ.BlockCalc: Set pass time after calls to "f_frq", by negative seconds, for cron schedule.
    Start and stop calc is added for enable/disable block of the run controller.
    Linked status is added for function and block's atributes links.
- DAQ.JavaLikeCalc: Set pass time after calls to "f_frq", by negative seconds, for cron schedule.
- !!!:DAQ.LogicLev: Moved to use system multitype parameters mechanism.
- DAQ.ModBus, DAQ.Siemens: Special template attributes bind is added for "SHIFR", "NAME", "DESCR" and "this".


2011-06-14 Roman
- !!:FIX:SYS: A time call schedule by cron is fixed to not-in-sync functions time() and clock_gettime(CLOCK_REALTIME,&sp_tm).
- FIX:SYS: Not-in-terminate function sleep() is replaced by usleep() everywhere.
- !!:DAQ.LogicLev, DAQ.Siemens, DAQ.ModBus: Set pass time after calls to "f_frq", by negative seconds, for cron schedule.
    Start and stop calc is added for enable/disable parameter of the run controller.


2011-06-13 Roman
- !!:SYS: Type "long long" is replaced to "int64_t" everywhere.
- UI.VCAEngine: Linked status is added for widgets links.
- SYS: Init-files added for RedHat- and Debian-based distributives.
- DAQ.DAQGate: Call by schedule, include periodic and cron, is added.


2011-06-12 Roman
- !!!:Archive.FSArch: Archive's index table processing is made more faster by use speed-optimal algorithm of dword's set bits count.


2011-06-10 Roman
- SYS.TVariant: New functions operator!=() and isEVal() is added.
- SYS.TValue, SYS.TValFunc: Generic functions TVal::get() and TVal::set() is added for abstract value container TValue.